[gd_scene load_steps=20 format=3 uid="uid://o3nqunngc5sc"]

[ext_resource type="Script" path="res://Scripts/home.gd" id="1_8q3f2"]
[ext_resource type="Texture2D" uid="uid://dgt146hw0hx73" path="res://Images/top_home.png" id="2_wkk61"]
[ext_resource type="Texture2D" uid="uid://cw6nllypx46it" path="res://Images/logo_white.png" id="3_s5003"]
[ext_resource type="FontFile" uid="uid://dal6uxhenekc3" path="res://Fonts/Inter/static/Inter_18pt-Black.ttf" id="4_f7xfr"]
[ext_resource type="FontFile" uid="uid://pape1wgjnach" path="res://Fonts/Inter/static/Inter_24pt-Medium.ttf" id="5_lgpdq"]
[ext_resource type="Texture2D" uid="uid://ckqsahj308dk1" path="res://Images/blue_button.png" id="6_iy4d0"]
[ext_resource type="Texture2D" uid="uid://cap57alllf614" path="res://Images/green_button.png" id="7_l7cyg"]
[ext_resource type="Theme" uid="uid://cqppled3h7rd2" path="res://resources/defaultTheme.tres" id="8_4xr2r"]
[ext_resource type="Texture2D" uid="uid://qrlo8nsyis25" path="res://Images/07.png" id="8_llvis"]
[ext_resource type="Theme" uid="uid://crdpgsyupauh0" path="res://resources/progressLabel.tres" id="9_7t724"]
[ext_resource type="Theme" path="res://resources/buttonPause.tres" id="9_nw6n7"]
[ext_resource type="Texture2D" uid="uid://bmjpqcvuf85p4" path="res://Images/pause.png" id="10_pjrwj"]
[ext_resource type="Texture2D" uid="uid://dtk0cce46is38" path="res://Images/account_circle.png" id="11_xqe6v"]
[ext_resource type="Texture2D" uid="uid://cks54fw7anss2" path="res://Images/add_home_green.png" id="13_4klr5"]
[ext_resource type="Texture2D" uid="uid://c6r2xhwl5uqxj" path="res://Images/output.png" id="13_7pjgl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvucd"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="AtlasTexture" id="AtlasTexture_flxvo"]
atlas = ExtResource("8_llvis")
region = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rc41"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_h51c8"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8q3f2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.99998, 0.998029)
color = Color(0.85098, 0.85098, 0.85098, 1)

[node name="Top" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 190.0
grow_horizontal = 2
scale = Vector2(1, 1.02381)
texture = ExtResource("2_wkk61")

[node name="MarginContainer" type="MarginContainer" parent="Top"]
layout_mode = 0
offset_right = 413.0
offset_bottom = 154.0

[node name="Logo" type="TextureRect" parent="Top/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_s5003")

[node name="Name" type="Label" parent="Top/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("4_f7xfr")
theme_override_font_sizes/font_size = 22
text = "Antonio Jes√∫s Sanchez Rosales"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 212.0
offset_right = 400.0
offset_bottom = 362.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pvucd")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = 9.0
offset_right = 84.5
offset_bottom = 34.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_fonts/font = ExtResource("4_f7xfr")
theme_override_font_sizes/font_size = 20
text = "Jornada prevista"

[node name="HSeparator" type="HSeparator" parent="Panel/Label"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -95.5
offset_top = 15.5
offset_right = -95.5
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.1215, 0.571429)

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = 5.49999
offset_right = 183.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Date" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.709804, 1, 1)
theme_override_fonts/font = ExtResource("5_lgpdq")
theme_override_font_sizes/font_size = 16
text = "17 feb 2025"
icon = ExtResource("6_iy4d0")
flat = true
icon_alignment = 1

[node name="Length" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.482353, 1)
theme_override_fonts/font = ExtResource("5_lgpdq")
theme_override_font_sizes/font_size = 16
text = "8:00 hours
"
icon = ExtResource("7_l7cyg")
flat = true
icon_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 404.0
offset_right = 142.0
offset_bottom = 420.0
scale = Vector2(10, 10)
fill_mode = 4
texture_progress = SubResource("AtlasTexture_flxvo")

[node name="LabelProgressBar" type="Label" parent="."]
layout_direction = 3
layout_mode = 0
offset_left = 188.0
offset_top = 584.0
offset_right = 228.0
offset_bottom = 658.0
theme = ExtResource("9_7t724")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Percent" type="Label" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 584.0
offset_right = 286.0
offset_bottom = 658.0
theme = ExtResource("9_7t724")
text = "%"

[node name="PanelContainer1" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.5
offset_top = 210.0
offset_right = 195.5
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_4xr2r")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer1"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer1/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer1/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="PanelContainer1/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_f7xfr")
theme_override_font_sizes/font_size = 16
text = "Comenzar"
flat = true
icon_alignment = 1

[node name="Finish" type="Button" parent="PanelContainer1/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_f7xfr")
theme_override_font_sizes/font_size = 16
text = "Terminar"
flat = true
icon_alignment = 1

[node name="Button" type="Button" parent="PanelContainer1/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_nw6n7")
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer1/MarginContainer/VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_pjrwj")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00121065
anchor_top = 0.917411
anchor_right = 0.995131
anchor_bottom = 0.999302
offset_right = 1.5108
offset_bottom = 0.62561
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.996333, 0.991546)
theme_override_styles/panel = SubResource("StyleBoxFlat_2rc41")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Account" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
icon = ExtResource("11_xqe6v")
flat = true

[node name="Home" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = SubResource("Theme_h51c8")
icon = ExtResource("13_4klr5")
flat = true
icon_alignment = 2

[node name="Output" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
icon = ExtResource("13_7pjgl")
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="PanelContainer1/MarginContainer/VBoxContainer/HBoxContainer/Finish" to="." method="_on_finish_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Account" to="." method="_on_account_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Output" to="." method="_on_output_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
